klass-model-converters/klass-compiler/src/test/resources/errors/DuplicatePropertyKeyword.klass
package dummy

class Dummy
{
    key key id: ID
}

association DummyAssociation
{
    owned owned parent: Dummy[0..1]
    owned owned children: Dummy[0..*]
}
